--- a/frontend/studybuddy-frontend/public/manifest.json
+++ b/frontend/studybuddy-frontend/public/manifest.json
@@ -20,6 +20,6 @@
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#6366f1",
-  "background_color": "#f6f7fb"
+  "theme_color": "#10b981",
+  "background_color": "#f0fdf4"
 }
